# Song-recommendation-model

./: .env.example  .pre-commit-config.yaml  CLEANUP_PLAN.md  CLEANUP_PROGRESS.md  MODERNIZATION_REPORT.md  Makefile  README_WEB.md  SPOTIFY_CLIENT_COMPARISON.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: new_top50.yml  send-email.yml  testing_workflow.yml
code/: read_spotify_million_playlists.py
docs/: README.md
requirements/: base.txt  dev.txt  prod.txt
scripts/: setup.ps1  setup.sh
src/: __init__.py  data_models.py  exceptions.py  logging_config.py  recommendation_engine.py  spotify_client.py  user_manager.py  validators.py
src/api/: __init__.py
src/core/: __init__.py  spotify.py
src/web/: __init__.py  auth.py  routes.py
streamlit/: streamlit.py
templates/: index.html
tests/: __init__.py  test_spotify_client.py  test_validators.py
