[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "song-recommendation-model"
version = "2.0.0"
description = "A modern song recommendation system using Spotify's API with ML-powered recommendations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Song Recommendation Team", email = "team@songrec.com"},
]
keywords = ["music", "recommendation", "spotify", "machine-learning", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core dependencies
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "spotipy>=2.22.0",
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
    
    # Data visualization
    "matplotlib>=3.8.0",
    "plotly>=5.17.0",
    "seaborn>=0.13.0",
    "altair>=5.0.0",
    "wordcloud>=1.9.0",
    
    # ML and data processing
    "openTSNE>=0.6.1",
    "tqdm>=4.66.0",
    
    # Web and API
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    
    # Streamlit components
    "streamlit-aggrid>=0.3.4",
    "streamlit-option-menu>=0.3.6",
    
    # Image processing
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    
    # Configuration
    "python-decouple>=3.8",
    
    # Modern data validation (optional enhancement)
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.3.0",
    
    # Code quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "flake8>=6.0.0",
    
    # Type stubs
    "types-requests>=2.31.0",
    "types-Pillow>=10.0.0",
    "pandas-stubs>=2.0.0",
    
    # Pre-commit
    "pre-commit>=3.5.0",
    
    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    
    # API dependencies for testing
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
]

prod = [
    # Production server
    "gunicorn>=21.2.0",
    "uvicorn>=0.24.0",
    
    # Database
    "psycopg2-binary>=2.9.0",
    
    # Caching
    "redis>=5.0.0",
    
    # Task queue
    "celery>=5.3.0",
    
    # Monitoring
    "loguru>=0.7.0",
]

api = [
    # FastAPI for REST API
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/your-username/song-recommendation-model"
Documentation = "https://song-recommendation-model.readthedocs.io"
Repository = "https://github.com/your-username/song-recommendation-model.git"
"Bug Tracker" = "https://github.com/your-username/song-recommendation-model/issues"

[project.scripts]
song-rec = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

# MyPy configuration
[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
python_version = "3.9"

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Ruff configuration (modern linter)
[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]